...
                android:checked="true"
                android:text="@string/negative"
                android:textSize="10pt" />
    </RadioGroup>

    <Button
        android:id="@+id/button_add_test_report_to_firebase"
        style="?android:attr/borderlessButtonStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
